# mtr_analysis

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: test-example.yml
example/: data.csv
mtr_analysis/: cli.py  cli_slurm.py  config.py  fitting.py  mutations.py  plotting.py  rna_map.py  time_parser.py
mtr_analysis/data/: C01HP.csv  C01HP.fasta  params.yml
mtr_analysis/slurm/: __init__.py  job.py  runner.py  templates.py
tests/: __init__.py  conftest.py  test_cli.py  test_cli_integration.py  test_cli_slurm.py  test_fitting.py  test_mutations.py  test_plotting.py  test_rna_map.py  test_rna_map_integration.py  test_slurm.py  test_slurm_integration.py  test_time_parser.py
