[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtr_analysis"
version = "0.1.0"
description = "Analysis scripts for processing MTR ribozyme data"
readme = "README.md"
authors = [{ name = "Joe Yesselman", email = "jyesselm@unl.edu" }]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "matplotlib>=3.5",
    "numpy>=1.21",
    "pandas>=1.4",
    "scipy>=1.8",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "pandas-stubs",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "types-click",
]

[project.scripts]
mtr-analysis = "mtr_analysis.cli:cli"

[tool.setuptools]
packages = { find = { where = ["."] } }

[tool.setuptools.package-data]
mtr_analysis = ["data/*"]

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "C90",    # mccabe complexity
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (needed for click)
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["mtr_analysis"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Mypy configuration (minimal)
[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "mtr_analysis.*"
disallow_untyped_defs = false

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=mtr_analysis",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=90",
]

[tool.coverage.run]
source = ["mtr_analysis"]
omit = [
    "mtr_analysis/data/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
